added to basics

--- a/English/1_Basics.ipynb
+++ b/English/1_Basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "9JleyyrQRu2t"
    },
@@ -28,7 +28,7 @@
     "id": "hT9EFX4kjd16"
    },
    "source": [
-    "#Dirac notation\n",
+    "# Dirac notation\n",
     "Qubits are represented by statevectors. We use dirac notation (bra-ket notation) to tidy up notation.\n",
     "\\\n",
     "The $\\vert \\cdot \\rangle$ is called a ket and represents a column vector.\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "d9tDT3aHoX-4"
    },
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -115,20 +115,128 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "LPOeOZeTmrWb"
-   },
+   "metadata": {},
    "source": [
-    "# Probability amplitudes\n",
-    "\n"
+    "To visualize this, we use the **Bloch sphere**, a geometric representation of a qubit's state. Any pure state can be represented as a point on the surface of the sphere, defined by two angles:\n",
+    "\n",
+    "$\\theta$ : Specifies the angle between the state and the $\\vert{0} \\rangle$ axis (north pole)\n",
+    "\n",
+    "$\\phi$ : Specifies the rotation around the z-axis. \n",
+    "\n",
+    "For example, $\\vert 0 \\rangle$ is the north pole ($\\theta = 0$) while $\\vert 1\\rangle$ is the south pole ($\\theta = \\pi$). \n",
+    "A general superposition lies somewhere on the sphere's surface.\n",
+    "\n",
+    "ADD IMAGE + MAYBE QTIP CODE \n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "eTcE_q51mq4a"
-   },
+   "metadata": {},
    "source": [
+    "# Operations on qubit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok we have qubits, they can be in superpositions of $\\vert 0 \\rangle$ and $\\vert 1 \\rangle$ and we can visualize them on the Bloch sphere. What exactly can we do to with them? We can apply **operations** on them. These are matrices that modify the state of the qubit, in other words, they move the qubit across the Bloch sphere. Let's try it. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will start with the most simple qubit state, state $\\vert 0 \\rangle$. As is, not a superposition state. It initially points up on the Bloch sphere. \n",
+    "What happens if we apply the following matrix to our qubit state? \n",
+    "\n",
+    "\\begin{equation}\n",
+    "H = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} \n",
+    "1 & -1\\\\\n",
+    "1 & 1\n",
+    "\\end{pmatrix}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EXERCICE\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Apply the H matrix to qubit state $\\vert 0 \\rangle$. You can use  [np.dot()](https://numpy.org/doc/2.1/reference/generated/numpy.dot.html) to perform the dot product between two arrays."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.70710678 0.70710678]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ket_0 = np.array([1,0])\n",
+    "H = 1/np.sqrt(2)*np.array([[1,-1], [1,1]])\n",
+    "\n",
+    "new_ket = np.dot(H, ket_0)\n",
+    "print(new_ket)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "$$\\left|\\psi\\right\\rangle = (0.707107) \\left|{0}\\right\\rangle + (0.707107) \\left|{1}\\right\\rangle$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from print_latex import print_state_vector\n",
+    "\n",
+    "print_state_vector(new_ket)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "H \\vert 0 \\rangle  = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} \n",
+    "1 & -1\\\\\n",
+    "1 & 1\n",
+    "\\end{pmatrix}\\begin{pmatrix} 0 \\\\1\\end{pmatrix} = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\1\\end{pmatrix}  = \\frac{1}{\\sqrt{2}}(\\vert 0 \\rangle + \\vert 1 \\rangle)\n",
+    "\\end{equation}\n",
+    "ADD IMAGE BLOCH SPHERE OR QTIP\n",
+    "\n",
+    "We have created a superposition state by applying a carefully selected matrix to our initial qubit state. This is a special matrix in quantum computing called a **Hadamard gate**. We will discuss it more in the next chapter. \n",
+    "\n",
+    "Applying matrices to vectors might seem abstract but this is something we can do quite precisely by sending pulses to qubits. This all happens in the background, so when using a quantum computer like MonarQ, we are abstracted away from pulses. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Probability amplitudes\n",
+    "\n",
     "Consider the general superposition,\n",
     "\\begin{equation}\n",
     "\\vert \\psi \\rangle = \\alpha \\vert 0 \\rangle + \\beta \\vert 1 \\rangle.\n",
@@ -137,69 +245,113 @@
     "Upon measurement, we will measure the qubit as being in state $\\vert 0 \\rangle$ with probability $\\alpha^* \\alpha$ and in $\\vert 1 \\rangle$ with probability $\\beta^* \\beta$. This is a postulate of quantum mechanics! We will use the modulus squared notation $\\vert \\cdot \\vert ^2 $ to denote the probability amplitudes.\n",
     "\n",
     "\\begin{equation}\n",
-    "P(\\vert 0 \\rangle) = \\vert \\alpha \\vert ^2 = \\alpha^* \\alpha\\\\\n",
+    "P(\\vert 0 \\rangle) = \\vert \\alpha \\vert ^2 = \\alpha^* \\alpha \n",
+    "\\end{equation}\n",
+    "\\begin{equation}\n",
     "P(\\vert 1 \\rangle) = \\vert \\beta \\vert ^2 = \\beta^* \\beta\n",
     "\\end{equation}\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "_cM2YwNLo1l9",
-    "outputId": "687c6eb6-6cb4-4301-d67e-d6b73600be2c"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.9999999999999999+0j)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "np.dot(np.conj(psi), psi)"
+    "EXERCICE\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Consider the superposition state from the last exercice\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\vert \\psi \\rangle = \\frac{1}{\\sqrt{2}}\\vert 0 \\rangle + \\frac{1}{\\sqrt{2}} \\vert 1 \\rangle.\n",
+    "\\end{equation}\n",
+    "\n",
+    "Compute the probability $P_0$ of measuring $\\vert{0}\\rangle$ and the probability $P_1$ of measuring $\\vert{1}\\rangle$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "IFfryEkvp1bd",
-    "outputId": "d08a0708-fb93-43f4-9dc3-ef1ec5e58325"
-   },
+   "execution_count": 34,
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0.5-0.j       , 0. -0.8660254j])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4999999999999999 0.4999999999999999\n"
+     ]
     }
    ],
    "source": [
-    "np.conj(psi)"
+    "#Compute the probability P0 of measuring \\ket(0)\n",
+    "P0 = np.conj(new_ket[0])*(new_ket[0])\n",
+    "#Compute the probability P1 of measuring \\ket(1) \n",
+    "P1 = np.conj(new_ket[1])*(new_ket[1])\n",
+    "\n",
+    "print(P0, P1)\n",
+    "\n",
+    "probs = np.conj(new_ket)*new_ket"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So we will measure $\\vert 0 \\rangle$ 50% of the time and $\\vert 1 \\rangle$ the other 50% of the time. Quantum computation is probabilistic."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "Bf6wwc-EqD7k"
    },
+   "source": [
+    "Surprisingly, this is all you need to build a basic quantum simulator. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EXERCICE\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Use [np.random.choice()](https://numpy.org/doc/2.1/reference/random/generated/numpy.random.choice.html) to simulate the results of 1000 measurements by sampling from the probability distribution you found above.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1]), array([489, 511]))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res = np.random.choice([0, 1], p = probs, size = 1000)\n",
+    "np.unique(res, return_counts = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This was a very simple example, especially because we did everything with **one** qubit. Multi-qubit systems are more complicated. In particular, they can be **entangled** with each other. We will study multi-qubit systems in the next chapter with quantum circuits. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
