--- a/English/2_PennyLane.ipynb
+++ b/English/2_PennyLane.ipynb
@@ -636,13 +636,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##3Ajouter un exercice### \n",
+    "##Ajouter un exercice### \n",
     "##plot with matplotlib maybe###"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
