--- a/Français/3_MonarQ.ipynb
+++ b/Français/3_MonarQ.ipynb
@@ -42,21 +42,21 @@
     "\n",
     "my_client = MonarqClient(\"https://monarq.calculquebec.ca\", \"your user\", \"your access token\")\n",
     "\n",
-    "from pennylane_calculquebec.processing.config import MonarqDefaultConfig, NoPlaceNoRouteConfig, ProcessingConfig\n",
+    "from pennylane_calculquebec.processing.config import MonarqDefaultConfig, NoPlaceNoRouteConfig, ProcessingConfig, PrintDefaultConfig, PrintNoPlaceNoRouteConfig\n",
     "from pennylane_calculquebec.processing.interfaces import PreProcStep, PostProcStep\n",
     "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation, MatrixReadoutMitigation\n",
     "\n",
-    "class PrintWires(PreProcStep):\n",
-    "    def execute(self, tape):\n",
-    "        print(tape.wires)\n",
-    "        print(*tape.operations)\n",
-    "        return tape\n",
+    "# class PrintWires(PreProcStep):\n",
+    "#     def execute(self, tape):\n",
+    "#         print(tape.wires)\n",
+    "#         print(*tape.operations)\n",
+    "#         return tape\n",
     "    \n",
-    "my_config = MonarqDefaultConfig() # config par défaut (placement et routage, decomposition des portes et optimisation du circuit)\n",
-    "my_config_no_routing = NoPlaceNoRouteConfig()\n",
+    "my_config = PrintDefaultConfig() # config par défaut (placement et routage, decomposition des portes et optimisation du circuit)\n",
+    "my_config_no_routing = PrintNoPlaceNoRouteConfig()\n",
     "\n",
-    "my_config.steps.append(PrintWires()) # J'ajoute une fonction à ma config afin de m'afficher les qubits choisis par le transpileur\n",
-    "my_config_no_routing.steps.append(PrintWires())"
+    "# my_config.steps.append(PrintWires()) # J'ajoute une fonction à ma config afin de m'afficher les qubits choisis par le transpileur\n",
+    "# my_config_no_routing.steps.append(PrintWires())"
    ]
   },
   {
@@ -145,6 +145,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -152,13 +157,7 @@
    "source": [
     "dev = qml.device(\"monarq.default\", client = my_client, wires = 4, shots = 1000, processing_config = my_config)\n",
     "\n",
-    "dev2 = qml.device(\"monarq.default\", client = my_client, wires = [4, 0, 8, 1], shots = 1000, processing_config = my_config_no_routing)\n",
-    "\n",
-    "@qml.qnode(dev)\n",
-    "#EN EXERCICE\n",
-    "def ghz_on_monarq():\n",
-    "    ghz()\n",
-    "    return qml.counts()\n"
+    "dev2 = qml.device(\"monarq.default\", client = my_client, wires = [4, 0, 8, 1], shots = 1000, processing_config = my_config_no_routing)"
    ]
   },
   {
@@ -167,6 +166,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "@qml.qnode(dev)\n",
+    "#EN EXERCICE\n",
+    "def ghz_on_monarq():\n",
+    "    ghz()\n",
+    "    return qml.counts()   #changer pour expectation value\n",
     "\n",
     "result = ghz_on_monarq()\n",
     "print(result)\n",
@@ -183,6 +187,13 @@
     "ax.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Laisser les utilisateurs choisir leur qubit et voir la différence de résultats"
    ]
   },
   {
@@ -233,7 +244,6 @@
     "\n",
     "\n",
     "fig, ax  = qml.draw_mpl(ghz_simulated)()\n",
-    "\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
     "width = 0.2\n",
