--- a/Français/3_MonarQ.ipynb
+++ b/Français/3_MonarQ.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Soumettre des tâches sur MonarQ\n"
+    "# Notebook 3: Soumettre des tâches sur MonarQ\n"
    ]
   },
   {
@@ -194,6 +194,13 @@
    "metadata": {},
    "source": [
     "Laisser les utilisateurs choisir leur qubit et voir la différence de résultats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#"
    ]
   },
   {
