--- a/Français/3_MonarQ.ipynb
+++ b/Français/3_MonarQ.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plugin `pennylane-calculquebec` et MonarQ"
+    "## 1. Plugin `pennylane-calculquebec` et MonarQ"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "#         print(*tape.operations)\n",
     "#         return tape\n",
     "    \n",
-    "my_config = PrintDefaultConfig() # config par défaut (placement et routage, decomposition des portes et optimisation du circuit)\n",
+    "my_config = PrintDefaultConfig() # config par défaut avec affichage des qubits et étapes de transpilation (placement et routage, decomposition des portes et optimisation du circuit)\n",
     "my_config_no_routing = PrintNoPlaceNoRouteConfig()\n",
     "\n",
     "# my_config.steps.append(PrintWires()) # J'ajoute une fonction à ma config afin de m'afficher les qubits choisis par le transpileur\n",
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exemple - Circuit GHZ à 4 Qubits"
+    "## 2. Exemple - Circuit GHZ à 4 Qubits"
    ]
   },
   {
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il faut définir un device, un qnode et une fonction (circuit) quantique."
+    "Rappel : il faut définir un device, un qnode et un circuit quantique."
    ]
   },
   {
@@ -200,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#"
+    "## 3. Simulation"
    ]
   },
   {
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mitigation d'erreur"
+    "## 4. Mitigation d'erreur"
    ]
   },
   {
