--- a/Français/3_MonarQ.ipynb
+++ b/Français/3_MonarQ.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le plugin pennylane-calculquebec permet de développer des circuits quantiques en utilisant PennyLane et de l'éxécuter sur MonarQ. Il est aussi responsable de la transpilation du circuit en instructions (pulses) comprises par MonarQ.\n"
+    "Le plugin pennylane-calculquebec permet de développer des circuits quantiques en utilisant Pennylane et de l'éxécuter sur MonarQ. Il est aussi responsable de la transpilation du circuit en instructions (pulses) comprises par MonarQ.\n"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ici, on vient renseigner nos informations de connexion à travers le client et nous pouvons importer les configurations du transpileur que nous souhaitons. Voir [Transpileur quantique](https://docs.alliancecan.ca/wiki/Transpileur_quantique) et [Getting Started](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/getting_started.ipynb)."
+    "Ici, on vient renseigner nos informations de connexion à travers le client et nous pouvons importer les configurations du transpileur que nous souhaitons. Voir [Transpileur quantique](https://docs.alliancecan.ca/wiki/Transpileur_quantique) et [Getting Started](https://github.com/calculquebec/pennylane-calculquebec/blob/main/doc/getting_started.ipynb)"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vous pouvez laisser le transpileur choisir les qubits pour vous, ou vous pouvez les choisir manuellement en vous référant à l'architecture du QPU de MonarQ. "
+    "Vous pouvez laisser le transpileur choisir les qubits pour vous, ou vous pouvez les choisir manuellement en vous référant à l'architecture du QPU de MonarQ "
    ]
   },
   {
@@ -112,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#qml.expval va prochainement être implémentée, pour le momemnt on utilisera cette fonction\n",
+    "#qml.expval va prochainement être implémentée, pour le momemnt on utilisera cette fonction à tester\n",
     "\n",
     "def compute_expval(probabilities):\n",
     "    \n",
@@ -128,9 +128,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCICE\n",
-    "\n",
-    "---\n",
     "Rappel : il faut définir un device, un qnode et un circuit quantique."
    ]
   },
@@ -269,9 +266,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Des stratégies de mitigation d'erreur ont été implémentées et intégrées au transpileur. Post-processing sur le résultat. Confusion Matrix et Iterative Bayesian Unfolding (IBU).\n",
+    "On a donc pu constaté que les ordinateurs actuels dans l'ère NISQ font des erreurs. Ces dernières proviennent principalement d'imperfections matérielles que ce soit au niveau des portes, d'erreur de lecture, ou de déccohérence des qubits. La mitigation d'erreur consiste donc à réduire l'impact de ces erreurs dans les calculs quantiques."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Des stratégies de mitigation d'erreur ont été implémentées et intégrées au transpileur. Il s'agit contrairement à la correction d'erreur, de techniques de post-processing sur les résultats mesurés. \n",
     "\n",
-    "D'autres méthodes (ZNE, DD) sont en cours de développement."
+    "On retrouve entre autres:\n",
+    "* Readout Measurement Mitigation: correction des erreurs liés à la mesure (readout) \n",
+    "* Iterative Bayesian Unfolding (IBU): technique itérative pour retrouver une distribution plus précise des résultats\n",
+    "* Zero Noise Extrapolation (ZNE): on éxecute le circuit en amplifiant le bruit afin d'estimer le résultat idéal par extrapolation\n",
+    "* Digital Dynamical Decoupling (DDD): implémentation d'une séquence de portes identitées appliquée aux qubits inactifs pendant l'éxecution d'un circuit afin de limiter les effets de décohérence.\n",
+    "\n",
+    "Les deux dernières stratégies sont en cours de développement et s'appuient sur la toolbox [Mitiq](https://github.com/unitaryfund/mitiq) "
    ]
   },
   {
@@ -286,7 +296,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -300,9 +310,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
