--- a/Français/3_MonarQ.ipynb
+++ b/Français/3_MonarQ.ipynb
@@ -266,20 +266,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On a donc pu constaté que les ordinateurs actuels dans l'ère NISQ font des erreurs. Ces dernières proviennent principalement d'imperfections matérielles que ce soit au niveau des portes, d'erreur de lecture, ou de déccohérence des qubits. La mitigation d'erreur consiste donc à réduire l'impact de ces erreurs dans les calculs quantiques."
+    "On a donc pu constaté que les ordinateurs actuels dans l'ère NISQ font des erreurs. Ces dernières proviennent principalement d'imperfections matérielles que ce soit au niveau de l'application des portes, d'erreur de lecture, ou de déccohérence des qubits. La mitigation d'erreur consiste donc à réduire l'impact de ces erreurs dans nos calculs quantiques.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Des stratégies de mitigation d'erreur ont été implémentées et intégrées au transpileur. Il s'agit contrairement à la correction d'erreur, de techniques de post-processing sur les résultats mesurés. \n",
+    "Des stratégies de mitigation d'erreur ont été implémentées et intégrées au transpileur. Il s'agit contrairement à de la correction d'erreur, de techniques de post-processing sur les résultats mesurés. \n",
     "\n",
     "On retrouve entre autres:\n",
-    "* Readout Measurement Mitigation: correction des erreurs liés à la mesure (readout) \n",
-    "* Iterative Bayesian Unfolding (IBU): technique itérative pour retrouver une distribution plus précise des résultats\n",
-    "* Zero Noise Extrapolation (ZNE): on éxecute le circuit en amplifiant le bruit afin d'estimer le résultat idéal par extrapolation\n",
-    "* Digital Dynamical Decoupling (DDD): implémentation d'une séquence de portes identitées appliquée aux qubits inactifs pendant l'éxecution d'un circuit afin de limiter les effets de décohérence.\n",
+    "* Readout Measurement Mitigation: correction des erreurs liés à la mesure (readout). \n",
+    "* Iterative Bayesian Unfolding (IBU): technique itérative pour retrouver une distribution plus précise des résultats.\n",
+    "* Zero Noise Extrapolation (ZNE): on éxecute le circuit en amplifiant le bruit afin d'estimer le résultat idéal par extrapolation.\n",
+    "* Digital Dynamical Decoupling (DDD): implémentation d'une séquence de portes identités appliquée aux qubits inactifs pendant l'éxecution d'un circuit afin de limiter les effets de décohérence.\n",
     "\n",
     "Les deux dernières stratégies sont en cours de développement et s'appuient sur la toolbox [Mitiq](https://github.com/unitaryfund/mitiq) "
    ]
