--- a/Français/4_Defi_bernstein_vazirani.ipynb
+++ b/Français/4_Defi_bernstein_vazirani.ipynb
@@ -120,7 +120,9 @@
    "metadata": {
     "id": "ISjFOqUb_OXw"
    },
-   "source": []
+   "source": [
+    "à tester"
+   ]
   },
   {
    "cell_type": "code",
@@ -129,7 +131,61 @@
     "id": "62JqSU-F_ogx"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import pennylane as qml\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from pennylane_calculquebec.API.client import MonarqClient\n",
+    "\n",
+    "my_client = MonarqClient(\"https://monarq.calculquebec.ca\", \"your user\", \"your access token\")\n",
+    "\n",
+    "from pennylane_calculquebec.processing.config import MonarqDefaultConfig, NoPlaceNoRouteConfig, ProcessingConfig, PrintDefaultConfig, PrintNoPlaceNoRouteConfig\n",
+    "from pennylane_calculquebec.processing.interfaces import PreProcStep, PostProcStep\n",
+    "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation, MatrixReadoutMitigation\n",
+    "\n",
+    "config = MonarqDefaultConfig\n",
+    "\n",
+    "s = '011'\n",
+    "n_qubits = len(s)\n",
+    "\n",
+    "dev = qml.device(\"monarq.default\", client = my_client, wires = n_qubits+1, shots = 1000, processing_config = config)\n",
+    "\n",
+    "@qml.qnode(dev)\n",
+    "def bernstein_vazirani(s):\n",
+    "    # Étapes 1-2: Initialisation et superposition\n",
+    "    for i in range(n_qubits):\n",
+    "        qml.Hadamard(wires=i)\n",
+    "\n",
+    "    qml.PauliX(wires=n_qubits)\n",
+    "    qml.Hadamard(wires=n_qubits)\n",
+    "\n",
+    "    # Étape 3 : Application de l'oracle pour la chaîne binaire s\n",
+    "    for i in range(n_qubits):\n",
+    "        if s[i] == '1':\n",
+    "            qml.CNOT(wires=[i, n_qubits])\n",
+    "\n",
+    "    # Étape 4 : Transformation Hadamard\n",
+    "    for i in range(n_qubits):\n",
+    "        qml.Hadamard(wires=i)\n",
+    "\n",
+    "    # Étape 5 : Mesure des qubits d'entrée\n",
+    "    return qml.counts(wires=range(n_qubits))\n",
+    "\n",
+    "result = bernstein_vazirani(s)\n",
+    "print(result)\n",
+    "\n",
+    "labels = list(result.keys())\n",
+    "values = list(result.values())\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.bar(labels, values)\n",
+    "plt.xlabel('Bit String Result')\n",
+    "plt.ylabel('Counts')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(axis='y')\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -137,7 +193,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -151,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
