--- a/Français/4_Defi_bernstein_vazirani.ipynb
+++ b/Français/4_Defi_bernstein_vazirani.ipynb
@@ -143,7 +143,7 @@
     "from pennylane_calculquebec.processing.interfaces import PreProcStep, PostProcStep\n",
     "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation, MatrixReadoutMitigation\n",
     "\n",
-    "config = MonarqDefaultConfig\n",
+    "config = MonarqDefaultConfig()\n",
     "\n",
     "s = '011'\n",
     "n_qubits = len(s)\n",
