--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -161,14 +161,14 @@
     "\n",
     "L'un des outils les plus importants de l'informatique quantique est la possibilité d'appliquer des **opérations** sur les qubits. Ces opérations sont représentées par des **matrices** qui modifient l'état des qubits, les déplaçant ainsi dans la sphère de Bloch.  \n",
     "\n",
-    "Commençons par un état très simple, $vert \\psi \\rangle = \\vert 0 \\rangle$. Initialement, cet état n'est **pas une superposition** et pointe directement vers le haut de la sphère de Bloch.  \n",
+    "Commençons par un état très simple, $\\vert \\psi \\rangle = \\vert 0 \\rangle$. Initialement, cet état n'est **pas une superposition** et pointe directement vers le haut de la sphère de Bloch.  \n",
     "\n",
     "Maintenant, que se passe-t-il si nous appliquons la matrice suivante à l'état de notre qubit ?  \n",
     "\n",
     "\\begin{equation}\n",
     "H = \\frac{1}{\\sqrt{2}} \\begin{pmatrix} \n",
-    "1 & -1 \\\\ \n",
-    "1 & 1 \n",
+    "1 & 1 \\\\ \n",
+    "1 & -1 \n",
     "\\end{pmatrix}\n",
     "\\end{equation} "
    ]
@@ -417,9 +417,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "NENV",
+   "display_name": "base",
    "language": "python",
-   "name": "nenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -431,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
