--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -253,12 +253,12 @@
     "H \\vert 0 \\rangle  = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} \n",
     "1 & 1\\\\\n",
     "1 & -1\n",
-    "\\end{pmatrix}\\begin{pmatrix} 0 \\\\1\\end{pmatrix} = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\1\\end{pmatrix}  = \\frac{1}{\\sqrt{2}}(\\vert 0 \\rangle + \\vert 1 \\rangle)\n",
+    "\\end{pmatrix}\\begin{pmatrix} 1 \\\\0\\end{pmatrix} = \\frac{1}{\\sqrt{2}}\\begin{pmatrix} 1 \\\\1\\end{pmatrix}  = \\frac{1}{\\sqrt{2}}(\\vert 0 \\rangle + \\vert 1 \\rangle)\n",
     "\\end{equation}\n",
     "\n",
     "![Hadamard.png](attachment:5a81a3bc-c9db-4798-96fd-1913bc1fb8a9.png)\n",
     "\n",
-    "Nous avons créé un état de superposition en appliquant une matrice judicieusement sélectionnée à l'état initial de notre qubit. Il s'agit d'une matrice spéciale en informatique quantique appelée **porte de Hadamard**. Nous en parlerons plus en détail dans le prochain chapitre. \n",
+    "Nous avons créé un état de superposition en appliquant une matrice judicieusement sélectionnée à l'état initial de notre qubit. Il s'agit d'une matrice spéciale en informatique quantique appelée **opération de Hadamard**. Nous en parlerons plus en détail dans le prochain chapitre. \n",
     "\n",
     "Multiplier des vecteurs par des matrices peut sembler une action abstraite, mais dans les ordinateurs physiques comme MonarQ, elle est réalisée en envoyant des impulsions précises aux qubits. Cependant, lorsqu'on utilise un ordinateur quantique comme MonarQ, cette complexité est gérée en coulisses. Pour les utilisateurs, il n'est pas nécessaire de penser aux impulsions et nous nous contenterons de considérer de simples commandes (portes quantiques), ce qui nous permettra de nous concentrer sur la construction et l'exécution d'algorithmes quantiques."
    ]
