--- a/Français/2_PennyLane.ipynb
+++ b/Français/2_PennyLane.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.  Les bases: circuit, device et QNode\n",
+    "# 1.  Les bases PennyLane: circuit, device et QNode\n",
     "Importez PennyLane et Numpy"
    ]
   },
@@ -58,16 +58,16 @@
    "source": [
     "Pour créer un circuit quantique, il faut spécifier la machine sur laquelle le circuit sera exécuté (‘[device](https://docs.pennylane.ai/en/stable/code/qml_devices.html)’). Tout objet de calcul qui peut appliquer des opérations quantiques et renvoyer une valeur de mesure est une machine quantique, que ce soit du matériel quantique (MonarQ) ou un simulateur quantique (`default.qubit`, `lightning.qubit`)\n",
     "\n",
-    "Dans PennyLane, `wires` fait référence au nombre de qubits. Par défaut, les qubits sont initialisés à l'état $vert 0 \\rangle$. Si vous avez trois 'wires', votre état initial est $\\vert 000 \\rangle$."
+    "Dans PennyLane, `wires` fait référence au nombre de qubits. Par défaut, les qubits sont initialisés à l'état $\\vert 0 \\rangle$. Par exemple, l'état initial d'un circuit avec trois qubits est $\\vert 000 \\rangle$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\"default.qubit\" is a standard quantum simulator\n",
+    "#\"default.qubit\" est le simulateur de qubits standard\n",
     "dev = qml.device('default.qubit', wires = 2) #2-qubit quantum device"
    ]
   },
