--- a/Français/2_PennyLane.ipynb
+++ b/Français/2_PennyLane.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,9 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "$$\\left|\\psi\\right\\rangle = (0.707107) \\left|{0}\\right\\rangle + (-0.707107) \\left|{1}\\right\\rangle$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print_state_vector(circuit())"
    ]
@@ -245,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,9 +536,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.70710678+0.j 0.        +0.j 0.        +0.j 0.70710678+0.j]\n"
+     ]
+    }
+   ],
    "source": [
     "dev = qml.device('default.qubit',wires = 2)\n",
     "@qml.qnode(dev)\n",
@@ -540,7 +561,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pourquoi y a-t-il quatre entrées ? Notre paire de Bell est dans la base de 2 qubits. En d'autres termes, \n",
+    "Pourquoi y a-t-il quatre éléments dans notre vecteur de sortie ? Notre état de Bell est dans la base de 2 qubits et donc dans un espace d'Hilbert de dimension $2^n$ = 4. En d'autres termes, \n",
     "$$\\vert\\psi \\rangle = \\frac{1}{\\sqrt{2}}\\vert 00 \\rangle + 0 \\vert 01\\rangle + 0 \\vert 10 \\rangle + \\frac{1}{\\sqrt{2}}\\vert 11 \\rangle$$\n"
    ]
   },
@@ -553,9 +574,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "$$\\left|\\psi\\right\\rangle = (0.707107) \\left|{00}\\right\\rangle + (0.707107) \\left|{11}\\right\\rangle$$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "print_state_vector(bell_statevector())"
    ]
@@ -578,9 +612,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5 0.  0.  0.5]\n"
+     ]
+    }
+   ],
    "source": [
     "dev = qml.device('default.qubit',wires = 2)\n",
     "@qml.qnode(dev)\n",
@@ -596,9 +638,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pourquoi y a-t-il quatre entrées ? Notre paire de Bell est dans la base de 2 qubits. En d'autres termes, \n",
-    "$$\\vert\\psi \\rangle = \\frac{1}{\\sqrt{2}}\\vert 00 \\rangle + 0 \\vert 01 \\rangle + 0 \\vert 10 \\rangle + \\frac{1}{\\sqrt{2}}\\vert 11 \\rangle.$$\n",
-    "\n",
     "Il y a 50 % de chances de mesurer l'état $\\vert 00 \\rangle$ et 50 % de chances de mesurer l'état $\\vert 11 \\rangle$. Il y a 0 % de chances de mesurer l'état $\\vert 01 \\rangle$ et $\\vert 10 \\rangle$."
    ]
   },
@@ -613,7 +652,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ces mesures sont intéressantes, mais elles ont toutes été calculées exactement. En réalité, lors d'une expérience, nous obtenons un ensemble de mesures réelles échantillonnées à partir des probabilités de l'état des qubits $\\vert \\psi \\rangle$. Dans ce cas, l'état $\\vert \\psi \\rangle$ n'est pas accessible, mais nous pouvons « tricher » en simulant notre circuit de manière classique.\n",
+    "Ces mesures sont intéressantes, mais elles ont toutes été calculées analytiquement. En réalité, lors d'une expérience, nous obtenons un ensemble de mesures réelles échantillonnées à partir des probabilités de l'état des qubits $\\vert \\psi \\rangle$. Dans ce cas, l'état $\\vert \\psi \\rangle$ n'est pas accessible, mais nous pouvons « tricher » en simulant notre circuit de manière classique.\n",
     "\n",
     "\n",
     "Ainsi, si nous voulons imiter un ordinateur quantique, nous pouvons produire un ensemble de mesures à partir de l'état résultant. Pour ce faire, nous utilisons la fonction `qml.sample()`, pour laquelle nous devons spécifier le nombre d'échantillons ('shots') lors de la définition de la machine."
@@ -650,9 +689,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'00': 4, '11': 6}\n"
+     ]
+    }
+   ],
    "source": [
     "dev = qml.device('default.qubit', wires = 2, shots = 10)\n",
     "@qml.qnode(dev)\n",
@@ -694,9 +741,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "NENV",
+   "display_name": "base",
    "language": "python",
-   "name": "nenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -708,7 +755,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
