--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -84,16 +84,7 @@
     "id": "5rDVuTLhodqV",
     "outputId": "91e29782-8043-4f8d-c05e-9dccba6077d2"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.5+0.j        0. +0.8660254j]\n",
-      "[0.5-0.j        0. -0.8660254j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define amplitude coefficients\n",
     "# Make sure that alpha^*alpha + beta^* beta = 1\n",
@@ -177,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCISE\n",
+    "EXERCICE\n",
     "\n",
     "---\n",
     "\n",
@@ -186,17 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.70710678 0.70710678]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Define state 0\n",
     "ket_0 = np.array([1,0])\n",
@@ -218,22 +201,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "$$\\left|\\psi\\right\\rangle = (0.707107) \\left|{0}\\right\\rangle + (0.707107) \\left|{1}\\right\\rangle$$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from print_latex import print_state_vector\n",
     "\n",
@@ -291,7 +261,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCISE\n",
+    "EXERCICE\n",
     "\n",
     "---\n",
     "\n",
@@ -306,17 +276,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4999999999999999 0.4999999999999999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Compute the probability P0 of measuring \\ket(0)\n",
     "P0 = np.conj(new_ket[0])*(new_ket[0])\n",
@@ -348,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCISE\n",
+    "EXERCICE\n",
     "\n",
     "---\n",
     "\n",
@@ -357,20 +319,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([0, 1]), array([489, 511]))"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "res = np.random.choice([0, 1], p = probs, size = 1000)\n",
     "np.unique(res, return_counts = True)"
@@ -403,13 +354,6 @@
    "source": [
     "![Screen Shot 2025-01-28 at 2.49.36 PM.png](attachment:ac2eb31a-a6e9-481c-8e55-2d283be438be.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
