--- a/Français/2_PennyLane.ipynb
+++ b/Français/2_PennyLane.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.  Les bases PennyLane: circuit, device et QNode\n",
+    "# 1.  Les bases: circuit, device et QNode\n",
     "Importez PennyLane et Numpy"
    ]
   },
@@ -58,16 +58,16 @@
    "source": [
     "Pour créer un circuit quantique, il faut spécifier la machine sur laquelle le circuit sera exécuté (‘[device](https://docs.pennylane.ai/en/stable/code/qml_devices.html)’). Tout objet de calcul qui peut appliquer des opérations quantiques et renvoyer une valeur de mesure est une machine quantique, que ce soit du matériel quantique (MonarQ) ou un simulateur quantique (`default.qubit`, `lightning.qubit`)\n",
     "\n",
-    "Dans PennyLane, `wires` fait référence au nombre de qubits. Par défaut, les qubits sont initialisés à l'état $\\vert 0 \\rangle$. Par exemple, l'état initial d'un circuit avec trois qubits est $\\vert 000 \\rangle$."
+    "Dans PennyLane, `wires` fait référence au nombre de qubits. Par défaut, les qubits sont initialisés à l'état $vert 0 \\rangle$. Si vous avez trois 'wires', votre état initial est $\\vert 000 \\rangle$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\"default.qubit\" est le simulateur de qubits standard\n",
+    "#\"default.qubit\" is a standard quantum simulator\n",
     "dev = qml.device('default.qubit', wires = 2) #2-qubit quantum device"
    ]
   },
@@ -135,7 +135,7 @@
     "id": "h7x7Zd6Tip-1"
    },
    "source": [
-    "# 2.  Quantum gates"
+    "# 2.  Portes quantiques"
    ]
   },
   {
@@ -144,7 +144,7 @@
     "id": "tOqTNqZjqrjS"
    },
    "source": [
-    "Many [quantum gates](https://docs.pennylane.ai/en/stable/introduction/operations.html#qubit-operators) are implemented in PennyLane. Some gates act on a single qubit (or wire) while others act on multiple wires. Let's focus on some important gates. "
+    "De nombreuses [portes quantiques](https://docs.pennylane.ai/en/stable/introduction/operations.html#qubit-operators) sont implémentées dans PennyLane. Certaines portes agissent sur un seul qubit tandis que d'autres agissent sur plusieurs qubits. Concentrons-nous sur quelques portes importantes. "
    ]
   },
   {
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,22 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "$$\\left|\\psi\\right\\rangle = (0.707107) \\left|{0}\\right\\rangle + (-0.707107) \\left|{1}\\right\\rangle$$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_state_vector(circuit())"
    ]
@@ -258,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +312,7 @@
     "id": "sCct82XXbivB"
    },
    "source": [
-    "EXERCISE\n",
+    "EXERCICE\n",
     "\n",
     "---\n",
     "\n",
@@ -397,11 +384,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCISE\n",
+    "EXERCICE\n",
     "\n",
     "---\n",
     "\n",
-    "Add gates to the functions below to create the following three Bell states. Don't forget to define a `device` and to link the device and the circuit with a `QNode`."
+    "Ajoutez des portes aux fonctions ci-dessous pour créer les trois états de Bell suivants. N'oubliez pas de définir un `device` et de lier le device et le circuit avec un `QNode`."
    ]
   },
   {
@@ -450,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCISE\n",
+    "EXERCICE\n",
     "\n",
     "---\n",
     "\n",
@@ -511,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,17 +523,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.70710678+0.j 0.        +0.j 0.        +0.j 0.70710678+0.j]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dev = qml.device('default.qubit',wires = 2)\n",
     "@qml.qnode(dev)\n",
@@ -561,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pourquoi y a-t-il quatre éléments dans notre vecteur de sortie ? Notre état de Bell est dans la base de 2 qubits et donc dans un espace d'Hilbert de dimension $2^n$ = 4. En d'autres termes, \n",
+    "Pourquoi y a-t-il quatre entrées ? Notre paire de Bell est dans la base de 2 qubits. En d'autres termes, \n",
     "$$\\vert\\psi \\rangle = \\frac{1}{\\sqrt{2}}\\vert 00 \\rangle + 0 \\vert 01\\rangle + 0 \\vert 10 \\rangle + \\frac{1}{\\sqrt{2}}\\vert 11 \\rangle$$\n"
    ]
   },
@@ -574,22 +553,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "$$\\left|\\psi\\right\\rangle = (0.707107) \\left|{00}\\right\\rangle + (0.707107) \\left|{11}\\right\\rangle$$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_state_vector(bell_statevector())"
    ]
@@ -612,17 +578,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.5 0.  0.  0.5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dev = qml.device('default.qubit',wires = 2)\n",
     "@qml.qnode(dev)\n",
@@ -638,6 +596,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Pourquoi y a-t-il quatre entrées ? Notre paire de Bell est dans la base de 2 qubits. En d'autres termes, \n",
+    "$$\\vert\\psi \\rangle = \\frac{1}{\\sqrt{2}}\\vert 00 \\rangle + 0 \\vert 01 \\rangle + 0 \\vert 10 \\rangle + \\frac{1}{\\sqrt{2}}\\vert 11 \\rangle.$$\n",
+    "\n",
     "Il y a 50 % de chances de mesurer l'état $\\vert 00 \\rangle$ et 50 % de chances de mesurer l'état $\\vert 11 \\rangle$. Il y a 0 % de chances de mesurer l'état $\\vert 01 \\rangle$ et $\\vert 10 \\rangle$."
    ]
   },
@@ -652,7 +613,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ces mesures sont intéressantes, mais elles ont toutes été calculées analytiquement. En réalité, lors d'une expérience, nous obtenons un ensemble de mesures réelles échantillonnées à partir des probabilités de l'état des qubits $\\vert \\psi \\rangle$. Dans ce cas, l'état $\\vert \\psi \\rangle$ n'est pas accessible, mais nous pouvons « tricher » en simulant notre circuit de manière classique.\n",
+    "Ces mesures sont intéressantes, mais elles ont toutes été calculées exactement. En réalité, lors d'une expérience, nous obtenons un ensemble de mesures réelles échantillonnées à partir des probabilités de l'état des qubits $\\vert \\psi \\rangle$. Dans ce cas, l'état $\\vert \\psi \\rangle$ n'est pas accessible, mais nous pouvons « tricher » en simulant notre circuit de manière classique.\n",
     "\n",
     "\n",
     "Ainsi, si nous voulons imiter un ordinateur quantique, nous pouvons produire un ensemble de mesures à partir de l'état résultant. Pour ce faire, nous utilisons la fonction `qml.sample()`, pour laquelle nous devons spécifier le nombre d'échantillons ('shots') lors de la définition de la machine."
@@ -689,17 +650,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'00': 4, '11': 6}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dev = qml.device('default.qubit', wires = 2, shots = 10)\n",
     "@qml.qnode(dev)\n",
@@ -741,9 +694,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "NENV",
    "language": "python",
-   "name": "python3"
+   "name": "nenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -755,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
