--- a/Français/4_Defi_bernstein_vazirani.ipynb
+++ b/Français/4_Defi_bernstein_vazirani.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,8 @@
     "\n",
     "    # Étape 4 : Transformation de Hadamard sur les qubits d'entrée\n",
     "    for i in range(n_qubits):\n",
-    "        qml.Hadamard(wires=i)\n"
+    "        qml.Hadamard(wires=i)\n",
+    "     \n"
    ]
   },
   {
@@ -223,7 +224,19 @@
     "\n",
     "# Exécuter l'algorithme et afficher le résultat\n",
     "result = algorithm()\n",
-    "print(result)\n"
+    "print(result)\n",
+    "\n",
+    "# labels = list(result.keys())\n",
+    "# values = list(result.values())\n",
+    "\n",
+    "# plt.figure(figsize=(10, 5))\n",
+    "# plt.bar(labels, values)\n",
+    "# plt.xlabel('Bit String Result')\n",
+    "# plt.ylabel('Counts')\n",
+    "# plt.xticks(rotation=45)\n",
+    "# plt.grid(axis='y')\n",
+    "# plt.tight_layout()\n",
+    "# plt.show()\n"
    ]
   },
   {
@@ -250,13 +263,13 @@
     "from pennylane_calculquebec.API.client import MonarqClient\n",
     "\n",
     "#Définir un client MonarQ pour envoyer la tâche sur MonarQ\n",
-    "my_client = MonarqClient(\"https://monarq.calculquebec.ca\", \"your user\", \"your access token\")\n",
+    "my_client = MonarqClient(\"https://monarq.calculquebec.ca\", \"your username\", \"your token\")\n",
     "\n",
     "from pennylane_calculquebec.processing.config import MonarqDefaultConfig, NoPlaceNoRouteConfig, ProcessingConfig, PrintDefaultConfig, PrintNoPlaceNoRouteConfig\n",
     "from pennylane_calculquebec.processing.interfaces import PreProcStep, PostProcStep\n",
     "from pennylane_calculquebec.processing.steps import IBUReadoutMitigation, MatrixReadoutMitigation\n",
     "\n",
-    "config = MonarqDefaultConfig()\n",
+    "config = PrintDefaultConfig(False)\n",
     "\n",
     "# Définir la chaîne binaire secrète\n",
     "s = '001'\n",
@@ -309,9 +322,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "NENV",
+   "display_name": "base",
    "language": "python",
-   "name": "nenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -323,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
