--- a/Français/3_MonarQ.ipynb
+++ b/Français/3_MonarQ.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Le plugin pennylane-calculquebec permet de développer des circuits quantiques en utilisant Pennylane et de l'éxécuter sur MonarQ. Il est aussi responsable de la transpilation du circuit en instructions (pulses) comprises par MonarQ.\n"
+    "Le plugin pennylane-calculquebec permet de développer des circuits quantiques en utilisant PennyLane et de les exécuter sur MonarQ. Il est aussi responsable de la transpilation du circuit en instructions (pulses) comprises par MonarQ.\n"
    ]
   },
   {
@@ -345,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -359,7 +359,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
