--- a/Français/4_Defi_bernstein_vazirani.ipynb
+++ b/Français/4_Defi_bernstein_vazirani.ipynb
@@ -54,25 +54,25 @@
     "\n",
     "### 1. Préparation des qubits\n",
     "\n",
-    "Nous commençons avec $ n $ qubits d'entrée initialisés à l'état $ |0\\rangle $ et un qubit auxiliaire initialisé à l'état $ |1\\rangle $. L'état initial est donc:\n",
+    "Nous commençons avec $ n $ qubits d'entrée initialisés à l'état $ |0\\rangle $ et un qubit auxiliaire initialisé à l'état $ |1\\rangle $. L'état initial est donc\n",
     "\\begin{align}\n",
-    "       |0\\rangle^{\\otimes n} |1\\rangle   \n",
+    "       |0\\rangle^{\\otimes n} |1\\rangle  . \n",
     "    \\end{align}\n",
     "\n",
     "\n",
     "### 2. Superposition\n",
     "\n",
-    "Appliquez une porte Hadamard $ H $ à chaque qubit d'entrée. La porte Hadamard transforme un qubit dans l'état $ |0\\rangle $ en une superposition égale de $ |0\\rangle $ et $ |1\\rangle $ :\n",
+    "Appliquez une porte Hadamard $ H $ à chaque qubit d'entrée. La porte Hadamard transforme un qubit dans l'état $ |0\\rangle $ en une superposition égale de $ |0\\rangle $ et $ |1\\rangle $,\n",
     "\n",
     "\\begin{align}\n",
-    "        H|0\\rangle = \\frac{1}{\\sqrt{2}} (|0\\rangle + |1\\rangle)    \n",
+    "        H|0\\rangle = \\frac{1}{\\sqrt{2}} (|0\\rangle + |1\\rangle).    \n",
     "    \\end{align}\n",
     "\n",
     "\n",
     "Appliquée à tous les qubits, cela produit l'état superposé suivant pour les $n $ qubits d'entrée :\n",
     "\n",
     "\\begin{align}\n",
-    "        \\frac{1}{\\sqrt{2^n}} \\sum_{x=0}^{2^n-1} |x\\rangle\n",
+    "        \\frac{1}{\\sqrt{2^n}} \\sum_{x=0}^{2^n-1} |x\\rangle.\n",
     "    \\end{align}\n",
     "\n",
     "\n",
@@ -83,13 +83,14 @@
     "\n",
     "L'oracle est une boîte noire qui implémente la fonction $ f(x) $. Cette fonction est telle que $ f(x) = s \\cdot x $, où $ s $ est la chaîne binaire inconnue que nous voulons découvrir. L'oracle applique une porte CNOT conditionnelle à chaque qubit d'entrée en fonction de $ s $. Si le bit $ s_i $ de $ s $ est 1, alors l'oracle applique une porte CNOT contrôlée par le qubit d'entrée $ x_i $ et cible le qubit auxiliaire.\n",
     "\n",
-    "Après l'application de l'oracle, l'état des qubits devient :\n",
+    "Après l'application de l'oracle, l'état des qubits devient \n",
     "\\begin{align}\n",
-    "        \\frac{1}{\\sqrt{2^n}} \\sum_{x=0}^{2^n-1} (-1)^{s \\cdot x} |x\\rangle\n",
+    "        \\frac{1}{\\sqrt{2^n}} \\sum_{x=0}^{2^n-1} (-1)^{s \\cdot x} |x\\rangle.\n",
     "    \\end{align}\n",
     "\n",
     "\n",
-    "Exemple d'application de l'oracle:\n",
+    "**Exemple d'application de l'oracle**\n",
+    "\n",
     "Soit $s=101$, l'oracle appliquera donc deux portes CNOT (une entre le 1er qubit et le qubit auxiliaire et une entre le 3e qubit et le qubit auxilaire).\n",
     "\n",
     "L'état superposé\n",
@@ -99,7 +100,7 @@
     "\n",
     "devient alors\n",
     "\\begin{align}\n",
-    "\\frac{1}{\\sqrt{8}} (\\vert 000 \\rangle - \\vert 001 \\rangle + \\vert 010 \\rangle - \\vert 011 \\rangle - \\vert 100 \\rangle + \\vert 101 \\rangle - \\vert 110 \\rangle + \\vert 111 \\rangle)\n",
+    "\\frac{1}{\\sqrt{8}} (\\vert 000 \\rangle - \\vert 001 \\rangle + \\vert 010 \\rangle - \\vert 011 \\rangle - \\vert 100 \\rangle + \\vert 101 \\rangle - \\vert 110 \\rangle + \\vert 111 \\rangle).\n",
     "\\end{align}\n",
     "\n",
     "\n",
@@ -145,13 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pennylane as qml\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def bernstein_vazirani(s):\n",
     "    \"\"\"\n",
     "    Implémente les quatre premières étapes de l'algorithme de Bernstein-Vazirani.\n",
@@ -315,6 +323,13 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -322,9 +337,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "NENV",
    "language": "python",
-   "name": "python3"
+   "name": "nenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -336,7 +351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
