--- a/Français/4_Defi_bernstein_vazirani.ipynb
+++ b/Français/4_Defi_bernstein_vazirani.ipynb
@@ -122,8 +122,8 @@
     "id": "8zIhio1_gpIs"
    },
    "source": [
-    "# À TESTER THEN REMOVE SOLUTION\n",
-    "EXERCICE\n",
+    "\n",
+    "# EXERCICE\n",
     "\n",
     "---\n",
     "\n",
