--- a/Français/3_MonarQ.ipynb
+++ b/Français/3_MonarQ.ipynb
@@ -124,19 +124,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# À LAISSER EN EXERCICE \n",
+    "# EXERCICE: Complétez les fonctions ghz() et ghz_manuel(). Dans la première on laisse le transpileur choisir les qubits et dans la seconde on choisit les qubits à utiliser\n",
     "\n",
     "def ghz():\n",
-    "    qml.Hadamard(wires=0)\n",
-    "    qml.CNOT(wires=[0, 1])\n",
-    "    qml.CNOT(wires=[0, 2])\n",
-    "    qml.CNOT(wires=[0, 3])\n",
+    "   ## à compléter\n",
     "\n",
     "def ghz_manuel():\n",
-    "    qml.Hadamard(wires=4)\n",
-    "    qml.CNOT(wires=[4, 0])\n",
-    "    qml.CNOT(wires=[4, 8])\n",
-    "    qml.CNOT(wires=[4, 1]) "
+    "   ## à compléter"
    ]
   },
   {
@@ -149,6 +143,7 @@
     "\n",
     "def ghz_on_monarq():\n",
     "    ghz_manuel()\n",
+    "    \n",
     "    return qml.counts()  \n",
     "    #return qml.probs()\n",
     "    #return qml.expval(qml.PauliZ(0)@qml.PauliZ(1)@qml.PauliZ(4)@qml.PauliZ(8))\n",
@@ -158,9 +153,7 @@
     "\n",
     "bitstr = list(result.keys())\n",
     "values = list(result.values())\n",
-    "probs = [x / 1000 for x in values]\n",
     "\n",
-    "#print(compute_expval(probs))\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 6))\n",
     "width = 0.5\n",
@@ -168,13 +161,6 @@
     "ax.legend()\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Laisser les utilisateurs choisir leur qubit et voir la différence de résultats"
    ]
   },
   {
@@ -207,8 +193,8 @@
     "\n",
     "bitstr = list(result.keys())\n",
     "values = list(result.values())\n",
-    "#probs = [x / 1000 for x in values]\n",
     "\n",
+    "#probs = [x / 1000 for x in values]\n",
     "\n",
     "fig, ax  = qml.draw_mpl(ghz_simulated)()\n",
     "\n",
