Made exercices into functions + solutions

--- a/Français/2_PennyLane.ipynb
+++ b/Français/2_PennyLane.ipynb
@@ -312,7 +312,7 @@
     "id": "sCct82XXbivB"
    },
    "source": [
-    "EXERCICE\n",
+    "EXERCICE 1\n",
     "\n",
     "---\n",
     "\n",
@@ -384,7 +384,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCICE\n",
+    "EXERCICE 2\n",
     "\n",
     "---\n",
     "\n",
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "EXERCICE\n",
+    "EXERCICE 3 (Optionel) \n",
     "\n",
     "---\n",
     "\n",
