--- a/Français/1_Simulateur_un_qubit.ipynb
+++ b/Français/1_Simulateur_un_qubit.ipynb
@@ -146,7 +146,7 @@
     "\n",
     "---\n",
     "\n",
-    "Complétez la fonction `is_normalized(state)` pour vérifier qu'un état arbitraire est normalisé, soit que $|\\alpha|^2 + |\\beta|^2 = 1"
+    "Complétez la fonction `is_normalized(state)` pour vérifier qu'un état arbitraire est normalisé, soit que $|\\alpha|^2 + |\\beta|^2 = 1$"
    ]
   },
   {
@@ -536,9 +536,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "NENV",
+   "display_name": "base",
    "language": "python",
-   "name": "nenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -550,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
