--- a/Français/2_PennyLane.ipynb
+++ b/Français/2_PennyLane.ipynb
@@ -730,7 +730,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sur du matériel quantique réel comme MonarQ, vous ne pouvez utiliser que qml.counts() ou qml.sample(). Vous devez spécifier le nombre de tirs ('shots') dans votre expérience. Pour l'instant, la limite sur MonarQ est de 1000 tirs ('shots') par expérience. "
+    "Sur du matériel quantique réel comme MonarQ, toutes les mesures sont stochastiques. Vous devez donc toujours spécifier le nombre de tirs ('shots'). Pour l'instant, la limite sur MonarQ est de 1000 tirs ('shots') par expérience. Les mesures disponibles sur MonarQ sont `qml.counts`, `qml.sample`, `qml.probs` et `qml.expval`."
    ]
   },
   {
@@ -753,7 +753,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -767,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
